[gd_scene load_steps=3 format=3 uid="uid://cxsogafckp7g"]

[ext_resource type="Script" path="res://Scripts/day_selection_menu.gd" id="1_ffdoa"]
[ext_resource type="FontFile" uid="uid://ngxarfbccvdp" path="res://Resources/Fonts/2005_iannnnnCPU.ttf" id="2_kiqf2"]

[node name="Day Selection Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffdoa")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -244.0
offset_right = 250.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 500.0
grow_horizontal = 2

[node name="MainPanel" type="Panel" parent="Background/CenterContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="Background/CenterContainer/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.5
offset_top = 30.0
offset_right = 81.5
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="Background/CenterContainer/MainPanel/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_kiqf2")
theme_override_font_sizes/font_size = 32
text = "เลือกวันที่ต้องการเล่น"
horizontal_alignment = 1

[node name="DayListScroll" type="ScrollContainer" parent="Background/CenterContainer/MainPanel/MainVBox"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="DayListContainer" type="VBoxContainer" parent="Background/CenterContainer/MainPanel/MainVBox/DayListScroll"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Background/CenterContainer/MainPanel/MainVBox"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="Background/CenterContainer/MainPanel/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_kiqf2")
theme_override_font_sizes/font_size = 32
text = "กลับ"
